fix: otpinfo form align

--- a/src/css/otp.css
+++ b/src/css/otp.css
@@ -12,6 +12,7 @@ form {
     margin: 4px 8px;
     max-width: 600px;
     display: inline-block;
+    vertical-align: top;
 }
 
 .moreFormItem {
